Change project context

--- a/ProductsProducer/src/main/resources/application.properties
+++ b/ProductsProducer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.context-path=/producer
+server.servlet.context-path=/ActiveMQ-Producer
 server.port=8080
 
 spring.activemq.broker-url=tcp://localhost:61616
