--- a/ProductsConsumer/src/main/resources/application.properties
+++ b/ProductsConsumer/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.servlet.context-path=/consumer
+server.servlet.context-path=/ActiveMQ-Consumer
 server.port=8081
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbconsumer
+spring.datasource.url=jdbc:postgresql://localhost:5432/db-activemq-consumer
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
